Layout bug fixes for IE and Edge.

--- a/themes/wwwevergreen/css/src/smacss/layout/content.scss
+++ b/themes/wwwevergreen/css/src/smacss/layout/content.scss
@@ -231,5 +231,6 @@
 	background-attachment: fixed;
 	background-clip: content-box;
 	background-image: url("/sites/all/themes/wwwevergreen/images/pattern-1.svg");
+	background-size: 10vw;  // Edge
 	background-size: 10vmax;
 }
